--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==2.0.1
 django-bower==5.2.0
 django-filter==1.1.0
 django-rest-swagger==2.0.7
+django-webpack-loader==0.5.0
 djangorestframework==3.7.7
 djangorestframework-simplejwt==3.2
 gunicorn==19.6.0
