--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "create-react-class": "^15.6.2",
+    "css-loader": "^0.28.9",
     "jquery": "^3.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-bundle-tracker": "^0.2.1"
   }
