--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-bundle-tracker": "^0.2.1"
