--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
-    "webpack-bundle-tracker": "^0.2.1"
+    "webpack-bundle-tracker": "^0.2.1",
+    "webpack-dev-server": "^3.1.1"
   }
 }
