--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropzone-component": "^3.1.2",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
