--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Markdown==2.6.6
 MarkupSafe==1.0
 model-mommy==1.3.0
 openapi-codec==1.1.7
+Pillow==5.0.0
 psycopg2==2.6.2
 PyJWT==1.5.3
 python-decouple==3.0
