Signed-off-by: Ayron Felipe Carvalho Araujo <ayron41@gmail.com>

--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "babel-preset-react": "^6.24.1",
     "create-react-class": "^15.6.2",
     "css-loader": "^0.28.9",
+    "dropify": "^0.2.2",
     "file-loader": "^1.1.11",
     "inputmask": "^3.3.11",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-dropzone-component": "^3.1.2",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
