--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "create-react-class": "^15.6.2",
     "css-loader": "^0.28.9",
     "dropify": "^0.2.2",
