--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 coreapi==2.3.3
 coreschema==0.0.4
-dj-database-url==0.4.1
+dj-database-url==0.5.0
 Django==2.0.1
 django-filter==1.1.0
+django-heroku==0.3.1
 django-rest-swagger==2.0.7
 django-webpack-loader==0.5.0
 djangorestframework==3.7.7
