Signed-off-by: Ayron Felipe Carvalho Araujo <ayron41@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto DRF + REACT",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --progress --colors"
+    "build": "webpack --config webpack.config.js --progress --colors",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
