Signed-off-by: Ayron Felipe Carvalho Araujo <ayron41@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ typings/
 .env
 
 # webpack generated files
+assets/bundles
 webpack-stats.json
 
 # End of https://www.gitignore.io/api/node,django
