--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "inputmask": "^3.3.11",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
+    "node-vibrant": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
