--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-vibrant": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-glide": "^2.0.0",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
