--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "node-vibrant": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-glide": "^2.0.0",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^0.19.1",
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
