--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+certifi==2018.4.16
+cloudinary==1.12.0
 coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
@@ -13,8 +15,10 @@ itypes==1.1.0
 Jinja2==2.10
 Markdown==2.6.6
 MarkupSafe==1.0
+mock==2.0.0
 model-mommy==1.3.0
 openapi-codec==1.1.7
+pbr==4.1.0
 Pillow==5.0.0
 psycopg2==2.7.1
 PyJWT==1.5.3
@@ -24,4 +28,5 @@ requests==2.11.1
 simplejson==3.10.0
 six==1.10.0
 uritemplate==3.0.0
+urllib3==1.23
 whitenoise==3.2.1
