--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
+    "react-materialize": "^2.3.3",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.23.1",
     "slick-carousel": "^1.8.1",
