--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-loader": "^4.0.0",
     "react-materialize": "^2.3.3",
     "react-router-dom": "^4.2.2",
+    "react-select": "^2.0.0",
     "react-slick": "^0.23.1",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.19.1",
