--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+asgiref==2.3.2
+async-timeout==3.0.1
+attrs==18.2.0
+autobahn==18.9.2
+Automat==0.7.0
 certifi==2018.4.16
+channels==2.1.3
 cloudinary==1.12.0
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+daphne==2.2.2
 dj-database-url==0.5.0
 Django==2.0.1
 django-filter==1.1.0
@@ -11,6 +19,9 @@ django-webpack-loader==0.5.0
 djangorestframework==3.7.7
 djangorestframework-simplejwt==3.2
 gunicorn==19.6.0
+hyperlink==18.0.0
+idna==2.7
+incremental==17.5.0
 itypes==1.1.0
 Jinja2==2.10
 Markdown==2.6.6
@@ -21,12 +32,18 @@ openapi-codec==1.1.7
 pbr==4.1.0
 Pillow==5.0.0
 psycopg2==2.7.1
+PyHamcrest==1.9.0
 PyJWT==1.5.3
+pypiwin32==223
 python-decouple==3.0
 pytz==2017.3
+pywin32==224
 requests==2.11.1
 simplejson==3.10.0
-six==1.10.0
+six==1.11.0
+Twisted==18.7.0
+txaio==18.8.1
 uritemplate==3.0.0
 urllib3==1.23
 whitenoise==3.2.1
+zope.interface==4.5.0
