--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ attrs==18.2.0
 autobahn==18.9.2
 Automat==0.7.0
 certifi==2018.4.16
-channels==2.1.3
 cloudinary==1.12.0
 constantly==15.1.0
 coreapi==2.3.3
@@ -28,6 +27,7 @@ Markdown==2.6.6
 MarkupSafe==1.0
 mock==2.0.0
 model-mommy==1.3.0
+msgpack==0.5.6
 openapi-codec==1.1.7
 pbr==4.1.0
 Pillow==5.0.0
