Notificações Real Time e ajustes
Signed-off-by: Ayron Felipe <ayron41@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "materialize-css": "^0.100.2",
     "moment": "^2.22.2",
     "node-vibrant": "^3.0.0",
+    "pusher-js": "^4.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
