--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==2.3.2
+asn1crypto==0.24.0
 async-timeout==3.0.1
 attrs==18.2.0
 autobahn==18.9.2
 Automat==0.7.0
 certifi==2018.4.16
+cffi==1.11.5
 cloudinary==1.12.0
 constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==2.3.1
 daphne==2.2.2
 dj-database-url==0.5.0
 Django==2.0.1
@@ -28,12 +31,17 @@ MarkupSafe==1.0
 mock==2.0.0
 model-mommy==1.3.0
 msgpack==0.5.6
+ndg-httpsclient==0.5.1
 openapi-codec==1.1.7
 pbr==4.1.0
 Pillow==5.0.0
 psycopg2==2.7.1
+pusher==2.0.1
+pyasn1==0.4.4
+pycparser==2.19
 PyHamcrest==1.9.0
 PyJWT==1.5.3
+pyOpenSSL==18.0.0
 python-decouple==3.0
 pytz==2017.3
 requests==2.11.1
