--- a/requirements.txt
+++ b/requirements.txt
@@ -34,8 +34,9 @@ msgpack==0.5.6
 ndg-httpsclient==0.5.1
 openapi-codec==1.1.7
 pbr==4.1.0
-Pillow==5.0.0
-psycopg2==2.7.1
+pillow==5.4.1
+psycopg2==2.7.7
+psycopg2-binary==2.7.5
 pusher==2.0.1
 pyasn1==0.4.4
 pycparser==2.19
@@ -47,6 +48,7 @@ pytz==2017.3
 requests==2.11.1
 simplejson==3.10.0
 six==1.11.0
+Twisted==18.9.0
 txaio==18.8.1
 uritemplate==3.0.0
 urllib3==1.23
