--- a/package.json
+++ b/package.json
@@ -28,18 +28,20 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "inputmask": "^3.3.11",
-    "jquery": "^3.2.1",
+    "jquery": "^3.4.1",
     "moment": "^2.22.2",
     "pusher-js": "^4.3.1",
     "qs": "^6.7.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
+    "react-tag-autocomplete": "^5.11.1",
     "style-loader": "^0.19.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.29.6",
