--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "pusher-js": "^4.3.1",
     "qs": "^6.7.0",
     "react": "^16.8.6",
+    "react-dnd": "^8.0.3",
+    "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.2.2",
-    "react-tag-autocomplete": "^5.11.1",
+    "react-tag-input": "^6.4.0",
     "style-loader": "^0.19.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.29.6",
