--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.9",
     "react-hot-loader": "^4.12.14",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.4.0-beta.8",
     "react-tag-input": "^6.4.1",
     "style-loader": "^0.19.1",
     "url-loader": "^1.1.2",
