--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "beauty-stars": "^1.0.4",
     "css-loader": "^2.1.1",
     "inputmask": "^3.3.11",
     "jquery": "^3.4.1",
